# ai-gene-review

./: .copier-answers.yml  .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  ai.just  index.html  justfile  mkdocs.yml  project.justfile  pyproject.toml  sitemap.xml
.claude/: settings.json
.claude/agents/: annotation-reviewer.md  bioinformatics-analyzer.md  core-function-synthesizer.md  (+1 more)
about/: index.html
app/: data.js  index.html  schema.js
assets/: gene_review.py
docs/: about.md  index.md  pmc_overrides.md  stats.ipynb  stats_executed.html  stats_report.html
exports/: exported_annotations.csv
genes/fly/CG6051/CG6051-bioinformatics/: CG6051.fasta  RESULTS.md  alignment_results.json  domain_analysis.py  domain_analysis_results.json  extract_sequence.py  fetch_human_lst2.py  final_analysis.py  final_analysis_results.json  human_LST2.fasta  improved_alignment.py  justfile  main.py  pyproject.toml  sequence_alignment.py
genes/human/C18orf21/C18orf21-bioinformatics/: 01_sequence_analysis.py  02_disorder_analysis.py  03_motif_analysis.py  RESULTS.md  analysis_data.json  analyze_c18orf21.py  main.py  pyproject.toml
genes/human/C18orf21/C18orf21-bioinformatics/data/: C18orf21.fasta
genes/human/C18orf21/C18orf21-bioinformatics/genes/human/C18orf21/C18orf21-bioinformatics/: main.py  pyproject.toml
genes/pombe/tam10/tam10-bioinformatics/: RESULTS.md  advanced_homology_analysis.py  analyze_sequence.py  analyze_smap_region.py  compare_tam10_knop1.py  correct_identity_calculation.py  final_homology_check.py  final_verdict.txt  justfile  main.py  predict_secondary_structure.py  pyproject.toml  tam10.fasta  tam10_knop1_alignment.txt  test_protein.fasta
genes/pombe/tam10/tam10-bioinformatics/results/: analysis_report.txt  smap_analysis.json  smap_report.txt  ss_report.txt  ss_results.json
genes/pombe/tam10/tam10-bioinformatics/results_test/: analysis_results.json
genes/pombe/tam10/tam10-bioinformatics/test_results/: analysis_report.txt  analysis_results.json  smap_analysis.json  smap_report.txt  ss_report.txt  ss_results.json
genes/worm/lrx-1/lrx-1-bioinformatics/: DEEPTMHMM_ANALYSIS.md  README.md  RESULTS.md  alphafold_analysis.json  analyze_lrx1.py  check_alphafold.py  check_deeptmhmm.py  deeptmhmm_interpretation.json  deeptmhmm_results.txt  lrx1_analysis_results.json  lrx1_for_deeptmhmm.fasta  lrx1_for_deeptmhmm_new.fasta  mtc7_alphafold_test.json  mtc7_deeptmhmm.fasta  mtc7_test_results.json  parse_deeptmhmm.py  pyproject.toml  run_deeptmhmm.py  run_deeptmhmm_local.py
genes/worm/lrx-1/lrx-1-bioinformatics/biolib_results/: Q22179|LRX-1|C.elegans_probs.csv  TMRs.gff3  deeptmhmm_results.md  predicted_topologies.3line
genes/yeast/MTC7/MTC7-bioinformatics/: MTC7.fasta  RESULTS.md  analyze_alphafold.py  analyze_conservation.py  analyze_domains.py  analyze_structure.py  analyze_transmembrane.py  conservation_analysis_results.json  domain_analysis_results.json  justfile  main.py  mtc7_alphafold_results.json  mtc7_domain_results.json  mtc7_results.json  mtc7_structure_results.json  pyproject.toml  run_all_analyses.py  structure_analysis_results.json  test_protein.fasta  tm_analysis_results.json  visualize_3d_structure.py  ysc84_alphafold_results.json  ysc84_domain_results.json  ysc84_results.json  ysc84_structure_results.json
pmc_overrides/: index.html
publications/: PMID_10094049.md  PMID_10094636.md  PMID_10360174.md  PMID_10373512.md  PMID_10465784.md  PMID_10477523.md  PMID_10502458.md  PMID_10514511.md  PMID_10515935.md  PMID_10518542.md  PMID_10551859.md  PMID_10570467.md  PMID_10581360.md  PMID_10591652.md  PMID_10591653.md  PMID_10662781.md  PMID_10688190.md  PMID_10698692.md  PMID_10702271.md  PMID_10710310.md  PMID_10713156.md  PMID_10716720.md  PMID_10742094.md  PMID_10805805.md  PMID_10815637.md  PMID_10825200.md  PMID_10848577.md  PMID_10855792.md  PMID_10882101.md  PMID_10888872.md  PMID_10892653.md  PMID_10911993.md  PMID_10913169.md  PMID_10920205.md  PMID_10962037.md  PMID_10973261.md  PMID_10973496.md  PMID_11007892.md  PMID_11045615.md  PMID_11057907.md  (+692 more)
reactome/: R-HSA-1112602.md  R-HSA-1112703.md  R-HSA-1169397.md  R-HSA-1169404.md  R-HSA-202534.md  R-HSA-212222.md  R-HSA-212269.md  R-HSA-2730904.md  R-HSA-446877.md  R-HSA-450358.md  R-HSA-452122.md  R-HSA-4655431.md  R-HSA-5653754.md  R-HSA-5654510.md  R-HSA-5654511.md  R-HSA-6785807.md  R-HSA-6786095.md  R-HSA-6786096.md  R-HSA-873924.md  R-HSA-936563.md  R-HSA-936942.md  R-HSA-936986.md  R-HSA-9645394.md  R-HSA-9645414.md  R-HSA-9701000.md  R-HSA-9710490.md  R-HSA-975147.md  R-HSA-9851058.md  R-HSA-9851071.md  R-HSA-9851145.md  R-HSA-9927247.md
search/: search_index.json
stats/: index.html
tests/: __init__.py  test_file_reference_validation.py  test_gene_etl.py  test_go_branch_validation.py  test_goa_sorting.py  test_goa_strict_validation.py  test_goa_validator.py  test_goref_reference_validation.py  test_goref_validation.py  test_invalid_curies.py  test_organism_codes.py  test_pmc_overrides.py  test_publication_etl.py  test_publication_validator.py  test_reference_validation.py  test_supporting_text_validator.py  test_term_validator.py  test_validator.py  test_validator_core_functions.py
(+548 files in other folders)
