[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[project]
name = "ai_gene_review"
description = "This is the project description."
authors = [
  {name = "My Name", email = "my-name@my-org.org"},
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dynamic = ["version"]

dependencies = [
  "typer>=0.9.0",
  "linkml-runtime >=1.9.4",
  "requests>=2.32.5",
  "biopython>=1.85",
  "openai>=1.101.0",
  "click>=8.2.1",
  "oaklib>=0.6.23",
  "pandas>=2.3.2",
  "linkml-browser>=0.1.0",
  "beautifulsoup4>=4.13.4",
  "pypdf2>=3.0.1",
  "pymupdf>=1.26.4",
  "drawsvg>=2.4.0",
  "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "linkml>=1.9.3",
    "mypy>=1.17.1",
    "ruff>=0.4.8",
    "mkdocs-material>=8.2.8",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "jupyter>=1.0.0",
    "mknotebooks>= 0.8.0",
    "types-requests>=2.32.4.20250809",
    "types-pyyaml>=6.0.12.20250822",
    "linkml-browser",
    "ai-gene-review",
]

[project.scripts]
ai-gene-review = "ai_gene_review.cli:main"


# See https://hatch.pypa.io/latest/config/build/#file-selection for how to
# explicitly include files other than default into the build distributions.

[tool.hatch.version]
source = "uv-dynamic-versioning"

# Ref.: https://github.com/ninoseki/uv-dynamic-versioning/
[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
fallback-version = "0.0.0"

# Ref.: https://docs.pytest.org/en/stable/reference/reference.html#configuration-options
[tool.pytest.ini_options]
testpaths = ["tests"]

# Ref.: https://github.com/codespell-project/codespell
[tool.codespell]
skip = [
  "LICENSE",
  "pyproject.toml",
  "uv.lock",
  "project/*",
  "src/ai_gene_review/datamodel/ai_gene_review_pydantic.py",
  "src/ai_gene_review/datamodel/ai_gene_review.py",
]

# Reminder: words have to be lowercased for the ignore-words-list
ignore-words-list = "linke"
quiet-level = 3

# Ref.: https://github.com/crate-ci/typos (spell checker)
[tool.typos.default.extend-words]
linke = "linke"
[tool.typos.files]
extend-exclude = [
  "LICENSE",
  "uv.lock",
  "pyproject.toml",
  "project/*",
  "src/ai_gene_review/datamodel/ai_gene_review_pydantic.py",
  "src/ai_gene_review/datamodel/ai_gene_review.py",
]

[tool.ruff]
# Exclude the genes/ directory from linting
extend-exclude = ["genes/"]

[tool.uv.workspace]
members = ["genes/human/RBFOX3/RBFOX3-bioinformatics/rbfox3_analysis", "genes/yeast/MTC7/MTC7-bioinformatics", "genes/human/CFAP418/CFAP418-bioinformatics", "genes/pombe/Epe1/Epe1-bioinformatics", "genes/pombe/tam10/tam10-bioinformatics", "genes/PSEPK/pedH/pedH-bioinformatics", "genes/human/C18orf21/C18orf21-bioinformatics", "genes/human/C18orf21/C18orf21-bioinformatics/genes/human/C18orf21/C18orf21-bioinformatics", "genes/fly/CG6051/CG6051-bioinformatics", "genes/PENCH/aatA/aatA-bioinformatics", "genes/METBS/Pks1/Pks1-bioinformatics"]

[tool.uv.sources]
linkml-browser = { git = "https://github.com/linkml/linkml-browser" }
ai-gene-review = { workspace = true }
