[project]
name = "lrx1-bioinformatics"
version = "0.1.0"
description = "Bioinformatics analysis of C. elegans LRX-1 protein"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "biopython>=1.83",
    "pybiolib>=1.1.0",
    "click>=8.2.1",
    "requests>=2.32.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]